// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeFilterHandler getInitialElementsPageError() should return error 1`] = `[Error: Elements error]`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for failed load: after the load 1`] = `"loading"`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for failed load: before the load 1`] = `"pending"`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for failed load: during the load 1`] = `"loading"`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for successful load: after the load 1`] = `"success"`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for successful load: before the load 1`] = `"pending"`;

exports[`AttributeFilterHandler getInitialElementsPageStatus() should return proper status for successful load: during the load 1`] = `"loading"`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by limit() 1`] = `
Array [
  Object {
    "title": "CompuSci",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
  },
  Object {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  Object {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by order() 1`] = `
Array [
  Object {
    "title": "WonderKid",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  },
  Object {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
  Object {
    "title": "PhoenixSoft",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
  },
  Object {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
  Object {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
  Object {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  Object {
    "title": "CompuSci",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by search() 1`] = `
Array [
  Object {
    "title": "WonderKid",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by setLimitingAttributeFilters() 1`] = `
Array [
  Object {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
  Object {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
  Object {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by setLimitingDateFilters() 1`] = `
Array [
  Object {
    "title": "Grammar Plus",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should be filtered by setLimitingMeasures() 1`] = `
Array [
  Object {
    "title": "Explorer",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
  },
  Object {
    "title": "TouchAll",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() should throw error if it's called before the initialization 1`] = `"Cannot call loadInitialElementsPage() before successful initialization."`;

exports[`AttributeFilterHandler loadInitialElementsPage() should trigger onLoadInitialElementsPageStart() callback: with parameters 1`] = `
Array [
  Object {
    "correlation": "start",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() that failed should trigger onLoadInitialElementsPageError() callback: with parameters 1`] = `
Array [
  Object {
    "correlation": "error",
    "error": [Error: Elements error],
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() that was canceled by another loadInitialElementsPage() call should trigger onLoadInitialElementsPageCancel() callback: with parameters 1`] = `
Array [
  Object {
    "correlation": "cancel",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() that was canceled by cancelInitialElementsPageLoad() call should trigger onLoadInitialElementsPageCancel() callback: with parameters 1`] = `
Array [
  Object {
    "correlation": "cancel",
  },
]
`;

exports[`AttributeFilterHandler loadInitialElementsPage() that was successful should trigger onLoadInitialElementsPageSuccess() callback: with parameters 1`] = `
Array [
  Object {
    "correlation": "success",
    "elements": Array [
      Object {
        "title": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
      Object {
        "title": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
      Object {
        "title": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
      Object {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
      Object {
        "title": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
      Object {
        "title": "TouchAll",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
      },
      Object {
        "title": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    ],
    "options": Object {
      "limit": 550,
      "limitingAttributeFilters": Array [],
      "limitingDateFilters": Array [],
      "limitingMeasures": Array [],
      "offset": 0,
      "order": undefined,
      "search": "",
    },
    "totalCount": 7,
  },
]
`;
